--- a/gallery.html
+++ b/gallery.html
@@ -145,64 +145,65 @@
         let imageAdded = false;
 
         uploadButton.addEventListener('click', async () => {
-            if (imageAdded) {
-                alert('You can only upload one image at a time!');
-                return;
+    if (imageAdded) {
+        alert('You can only upload one image at a time!');
+        return;
+    }
+
+    const file = imageInput.files[0];
+    if (file) {
+        // Create FormData for file upload
+        const formData = new FormData();
+        formData.append("image", file);
+
+        // Imgbb API URL (replace <your_api_key> with your actual API key)
+        const url = "https://api.imgbb.com/1/upload?key=<7d7565e92bbce212d792c5c927085203>";
+
+        try {
+            // Upload the image to Imgbb
+            const response = await fetch(url, {
+                method: "POST",
+                body: formData,
+            });
+
+            const data = await response.json();
+
+            if (data.success) {
+                // Get the image URL from Imgbb response
+                const imageUrl = data.data.url;
+
+                // Create a new image element and display it
+                const container = document.createElement('div');
+                container.className = 'image-container';
+
+                const img = document.createElement('img');
+                img.src = imageUrl; // Set the image source to the URL from Imgbb
+
+                // Optionally add a purchase button or any other action
+                const button = document.createElement('button');
+                button.className = 'purchase-btn';
+                button.textContent = 'Make 1px Bigger';
+                button.addEventListener('click', () => {
+                    const currentWidth = parseInt(img.style.width || 50);
+                    const currentHeight = parseInt(img.style.height || 50);
+                    img.style.width = currentWidth + 1 + 'px';
+                    img.style.height = currentHeight + 1 + 'px';
+                });
+
+                container.appendChild(img);
+                gallery.appendChild(container);
+                gallery.appendChild(button);
+                imageAdded = true;
+            } else {
+                alert("Error uploading image.");
             }
+        } catch (error) {
+            console.error(error);
+            alert("There was an error uploading the image.");
+        }
+    }
+});
 
-            const file = imageInput.files[0];
-            if (file) {
-                // Create FormData for file upload
-                const formData = new FormData();
-                formData.append("image", file);
-
-                // Imgbb API URL (replace <your_api_key> with your actual API key)
-                const url = "7d7565e92bbce212d792c5c927085203";
-
-                try {
-                    // Upload the image to Imgbb
-                    const response = await fetch(url, {
-                        method: "POST",
-                        body: formData,
-                    });
-
-                    const data = await response.json();
-
-                    if (data.success) {
-                        // Get the image URL from Imgbb response
-                        const imageUrl = data.data.url;
-
-                        // Create a new image element and display it
-                        const container = document.createElement('div');
-                        container.className = 'image-container';
-
-                        const img = document.createElement('img');
-                        img.src = imageUrl; // Set the image source to the URL from Imgbb
-
-                        // Add a purchase button (if needed)
-                        const button = document.createElement('button');
-                        button.className = 'purchase-btn';
-                        button.textContent = 'Make 1px Bigger';
-                        button.addEventListener('click', () => {
-                            const currentWidth = parseInt(img.style.width || 50);
-                            const currentHeight = parseInt(img.style.height || 50);
-                            img.style.width = currentWidth + 1 + 'px';
-                            img.style.height = currentHeight + 1 + 'px';
-                        });
-
-                        container.appendChild(img);
-                        gallery.appendChild(container);
-                        gallery.appendChild(button);
-                        imageAdded = true;
-                    } else {
-                        alert("Error uploading image.");
-                    }
-                } catch (error) {
-                    console.error(error);
-                    alert("There was an error uploading the image.");
-                }
-            }
-        });
     </script>
 </body>
 </html>
